# static_deps

./: CMakeLists.txt
src/: lib.cpp  lib.h  main.cpp
